Thu Aug  1 01:45:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Fix a condition of power_level.

Thu Aug  1 01:09:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LOG2_KARATSUBA_BIG2STR_DIGITS): Removed.
	  (KARATSUBA_BIG2STR_DIGITS): Removed.
	  (big2str_numdigits_cache): New variable.
	  (power_cache_get_power): Merged with power_cache_get_power0.
	  This function returns maxpow_in_bdigit_dbl(base)**(2**power_level).
	  (rb_big2str1): use power_cache_get_power.

Wed Jul 31 23:59:28 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_find_n1): Change the return type to size_t.
	  (big2str_orig): Ditto.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Follow the above changes.

Wed Jul 31 23:19:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (power_cache_get_power): Change numdigits_ret to size_t *.
	  (big2str_orig): Change len argument to size_t.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Follow the above changes.

Wed Jul 31 22:59:47 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parse/test_notation_declaration.rb: Change class
	  name to follow file name change.

Wed Jul 31 22:57:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Rename to ...
	* test/rexml/parse/test_notation_declaration.rb: ... this.

Wed Jul 31 22:54:39 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_mixin.rb: Remove duplicated tests.

Wed Jul 31 22:52:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix typos in expected
	  value.
	  pubilc ->
	  public
	     ^^

Wed Jul 31 22:50:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  system literal in external ID system notation declaration.

Wed Jul 31 22:36:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_cmp): Extracted from rb_big_cmp.
	  (power_cache_get_power): Change n1 argument (number of digits) to